python/dslParser.py
# Generated from dsl.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dslParser ( Parser ):

    grammarFileName = "dsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'flow'", "'->'", "'transformer'", "'in'", 
                     "'out'", "'backward'", "'forward'", "'Int'", "'Float'", 
                     "'Bool'", "'PolyExp'", "'ZonoExp'", "'Neuron'", "'List'", 
                     "'.'", "','", "'+'", "'-'", "'*'", "'/'", "'and'", 
                     "'or'", "'<'", "'='", "'=='", "'!='", "'>'", "'<='", 
                     "'>='", "'!'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "'?'", "':'", "'if'", "'traverse'", "'sum'", 
                     "'sub'", "'map'", "'dot'", "'argmin'", "'argmax'", 
                     "'min'", "'max'", "'weight'", "'bias'", "'layer'", 
                     "'Affine'", "'Relu'", "'Maxpool'", "'Sigmoid'", "'Tanh'", 
                     "'def Shape as'", "'func'", "'eps'", "'true'", "'false'", 
                     "'curr'", "'prev'" ]

    symbolicNames = [ "<INVALID>", "FLOW", "ARROW", "TRANSFORMER", "IN", 
                      "OUT", "BACKWARD", "FORWARD", "INTT", "FLOATT", "BOOL", 
                      "POLYEXP", "ZONOEXP", "NEURON", "LIST", "DOT", "COMMA", 
                      "PLUS", "MINUS", "MULT", "DIV", "AND", "OR", "LT", 
                      "EQ", "EQQ", "NEQ", "GT", "LEQ", "GEQ", "NOT", "LPAREN", 
                      "RPAREN", "LSQR", "RSQR", "LBRACE", "RBRACE", "SEMI", 
                      "QUES", "COLON", "IF", "TRAV", "SUM", "SUB", "MAP", 
                      "DOTT", "ARGMIN", "ARGMAX", "MIN", "MAX", "WEIGHT", 
                      "BIAS", "LAYER", "AFFINE", "RELU", "MAXPOOL", "SIGMOID", 
                      "TANH", "SHAPE", "FUNC", "EPSILON", "TRUE", "FALSE", 
                      "CURR", "PREV", "IntConst", "FloatConst", "VAR", "WS", 
                      "LineComment" ]

    RULE_prog = 0
    RULE_shape_decl = 1
    RULE_statement = 2
    RULE_func_decl = 3
    RULE_transformer = 4
    RULE_op_list = 5
    RULE_op_stmt = 6
    RULE_trans_decl = 7
    RULE_operator = 8
    RULE_trans_ret = 9
    RULE_types = 10
    RULE_arglist = 11
    RULE_expr_list = 12
    RULE_expr = 13
    RULE_func_op = 14
    RULE_func_op2 = 15
    RULE_binop = 16
    RULE_metadata = 17
    RULE_direction = 18
    RULE_pt = 19
    RULE_prop = 20

    ruleNames =  [ "prog", "shape_decl", "statement", "func_decl", "transformer", 
                   "op_list", "op_stmt", "trans_decl", "operator", "trans_ret", 
                   "types", "arglist", "expr_list", "expr", "func_op", "func_op2", 
                   "binop", "metadata", "direction", "pt", "prop" ]

    EOF = Token.EOF
    FLOW=1
    ARROW=2
    TRANSFORMER=3
    IN=4
    OUT=5
    BACKWARD=6
    FORWARD=7
    INTT=8
    FLOATT=9
    BOOL=10
    POLYEXP=11
    ZONOEXP=12
    NEURON=13
    LIST=14
    DOT=15
    COMMA=16
    PLUS=17
    MINUS=18
    MULT=19
    DIV=20
    AND=21
    OR=22
    LT=23
    EQ=24
    EQQ=25
    NEQ=26
    GT=27
    LEQ=28
    GEQ=29
    NOT=30
    LPAREN=31
    RPAREN=32
    LSQR=33
    RSQR=34
    LBRACE=35
    RBRACE=36
    SEMI=37
    QUES=38
    COLON=39
    IF=40
    TRAV=41
    SUM=42
    SUB=43
    MAP=44
    DOTT=45
    ARGMIN=46
    ARGMAX=47
    MIN=48
    MAX=49
    WEIGHT=50
    BIAS=51
    LAYER=52
    AFFINE=53
    RELU=54
    MAXPOOL=55
    SIGMOID=56
    TANH=57
    SHAPE=58
    FUNC=59
    EPSILON=60
    TRUE=61
    FALSE=62
    CURR=63
    PREV=64
    IntConst=65
    FloatConst=66
    VAR=67
    WS=68
    LineComment=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shape_decl(self):
            return self.getTypedRuleContext(dslParser.Shape_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(dslParser.StatementContext,0)


        def EOF(self):
            return self.getToken(dslParser.EOF, 0)

        def getRuleIndex(self):
            return dslParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = dslParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.shape_decl()
            self.state = 43
            self.statement(0)
            self.state = 44
            self.match(dslParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shape_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHAPE(self):
            return self.getToken(dslParser.SHAPE, 0)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(dslParser.ArglistContext,0)


        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(dslParser.LBRACE, 0)

        def prop(self):
            return self.getTypedRuleContext(dslParser.PropContext,0)


        def RBRACE(self):
            return self.getToken(dslParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def getRuleIndex(self):
            return dslParser.RULE_shape_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape_decl" ):
                listener.enterShape_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape_decl" ):
                listener.exitShape_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape_decl" ):
                return visitor.visitShape_decl(self)
            else:
                return visitor.visitChildren(self)




    def shape_decl(self):

        localctx = dslParser.Shape_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_shape_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(dslParser.SHAPE)
            self.state = 47
            self.match(dslParser.LPAREN)
            self.state = 48
            self.arglist()
            self.state = 49
            self.match(dslParser.RPAREN)
            self.state = 50
            self.match(dslParser.LBRACE)
            self.state = 51
            self.prop(0)
            self.state = 52
            self.match(dslParser.RBRACE)
            self.state = 53
            self.match(dslParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dslParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FlowstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOW(self):
            return self.getToken(dslParser.FLOW, 0)
        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)
        def direction(self):
            return self.getTypedRuleContext(dslParser.DirectionContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.COMMA)
            else:
                return self.getToken(dslParser.COMMA, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.ExprContext)
            else:
                return self.getTypedRuleContext(dslParser.ExprContext,i)

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)
        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlowstmt" ):
                listener.enterFlowstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlowstmt" ):
                listener.exitFlowstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlowstmt" ):
                return visitor.visitFlowstmt(self)
            else:
                return visitor.visitChildren(self)


    class FuncstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(dslParser.FUNC, 0)
        def func_decl(self):
            return self.getTypedRuleContext(dslParser.Func_declContext,0)

        def EQ(self):
            return self.getToken(dslParser.EQ, 0)
        def expr(self):
            return self.getTypedRuleContext(dslParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncstmt" ):
                listener.enterFuncstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncstmt" ):
                listener.exitFuncstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncstmt" ):
                return visitor.visitFuncstmt(self)
            else:
                return visitor.visitChildren(self)


    class SeqstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.StatementContext)
            else:
                return self.getTypedRuleContext(dslParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeqstmt" ):
                listener.enterSeqstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeqstmt" ):
                listener.exitSeqstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeqstmt" ):
                return visitor.visitSeqstmt(self)
            else:
                return visitor.visitChildren(self)


    class TransstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def transformer(self):
            return self.getTypedRuleContext(dslParser.TransformerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransstmt" ):
                listener.enterTransstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransstmt" ):
                listener.exitTransstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransstmt" ):
                return visitor.visitTransstmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = dslParser.StatementContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_statement, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = dslParser.FlowstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 56
                self.match(dslParser.FLOW)
                self.state = 57
                self.match(dslParser.LPAREN)
                self.state = 58
                self.direction()
                self.state = 59
                self.match(dslParser.COMMA)
                self.state = 60
                self.expr(0)
                self.state = 61
                self.match(dslParser.COMMA)
                self.state = 62
                self.expr(0)
                self.state = 63
                self.match(dslParser.COMMA)
                self.state = 64
                self.match(dslParser.VAR)
                self.state = 65
                self.match(dslParser.RPAREN)
                self.state = 66
                self.match(dslParser.SEMI)
                pass
            elif token in [59]:
                localctx = dslParser.FuncstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.match(dslParser.FUNC)
                self.state = 69
                self.func_decl()
                self.state = 70
                self.match(dslParser.EQ)
                self.state = 71
                self.expr(0)
                self.state = 72
                self.match(dslParser.SEMI)
                pass
            elif token in [3]:
                localctx = dslParser.TransstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.transformer()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = dslParser.SeqstmtContext(self, dslParser.StatementContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statement)
                    self.state = 77
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 78
                    self.statement(2) 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(dslParser.ArglistContext,0)


        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)

        def getRuleIndex(self):
            return dslParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = dslParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(dslParser.VAR)
            self.state = 85
            self.match(dslParser.LPAREN)
            self.state = 86
            self.arglist()
            self.state = 87
            self.match(dslParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransformerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trans_decl(self):
            return self.getTypedRuleContext(dslParser.Trans_declContext,0)


        def LBRACE(self):
            return self.getToken(dslParser.LBRACE, 0)

        def op_list(self):
            return self.getTypedRuleContext(dslParser.Op_listContext,0)


        def RBRACE(self):
            return self.getToken(dslParser.RBRACE, 0)

        def getRuleIndex(self):
            return dslParser.RULE_transformer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransformer" ):
                listener.enterTransformer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransformer" ):
                listener.exitTransformer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransformer" ):
                return visitor.visitTransformer(self)
            else:
                return visitor.visitChildren(self)




    def transformer(self):

        localctx = dslParser.TransformerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_transformer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.trans_decl()
            self.state = 90
            self.match(dslParser.LBRACE)
            self.state = 91
            self.op_list()
            self.state = 92
            self.match(dslParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op_stmt(self):
            return self.getTypedRuleContext(dslParser.Op_stmtContext,0)


        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def op_list(self):
            return self.getTypedRuleContext(dslParser.Op_listContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_op_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_list" ):
                listener.enterOp_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_list" ):
                listener.exitOp_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_list" ):
                return visitor.visitOp_list(self)
            else:
                return visitor.visitChildren(self)




    def op_list(self):

        localctx = dslParser.Op_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op_list)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.op_stmt()
                self.state = 95
                self.match(dslParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.op_stmt()
                self.state = 98
                self.match(dslParser.SEMI)
                self.state = 99
                self.op_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(dslParser.OperatorContext,0)


        def ARROW(self):
            return self.getToken(dslParser.ARROW, 0)

        def trans_ret(self):
            return self.getTypedRuleContext(dslParser.Trans_retContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_op_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_stmt" ):
                listener.enterOp_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_stmt" ):
                listener.exitOp_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_stmt" ):
                return visitor.visitOp_stmt(self)
            else:
                return visitor.visitChildren(self)




    def op_stmt(self):

        localctx = dslParser.Op_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_op_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.operator()
            self.state = 104
            self.match(dslParser.ARROW)
            self.state = 105
            self.trans_ret()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trans_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFORMER(self):
            return self.getToken(dslParser.TRANSFORMER, 0)

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)

        def CURR(self):
            return self.getToken(dslParser.CURR, 0)

        def COMMA(self):
            return self.getToken(dslParser.COMMA, 0)

        def PREV(self):
            return self.getToken(dslParser.PREV, 0)

        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)

        def getRuleIndex(self):
            return dslParser.RULE_trans_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrans_decl" ):
                listener.enterTrans_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrans_decl" ):
                listener.exitTrans_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrans_decl" ):
                return visitor.visitTrans_decl(self)
            else:
                return visitor.visitChildren(self)




    def trans_decl(self):

        localctx = dslParser.Trans_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_trans_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(dslParser.TRANSFORMER)
            self.state = 108
            self.match(dslParser.VAR)
            self.state = 109
            self.match(dslParser.LPAREN)
            self.state = 110
            self.match(dslParser.CURR)
            self.state = 111
            self.match(dslParser.COMMA)
            self.state = 112
            self.match(dslParser.PREV)
            self.state = 113
            self.match(dslParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AFFINE(self):
            return self.getToken(dslParser.AFFINE, 0)

        def RELU(self):
            return self.getToken(dslParser.RELU, 0)

        def MAXPOOL(self):
            return self.getToken(dslParser.MAXPOOL, 0)

        def SIGMOID(self):
            return self.getToken(dslParser.SIGMOID, 0)

        def TANH(self):
            return self.getToken(dslParser.TANH, 0)

        def getRuleIndex(self):
            return dslParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = dslParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 279223176896970752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trans_retContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dslParser.RULE_trans_ret

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondtransContext(Trans_retContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.Trans_retContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(dslParser.ExprContext,0)

        def QUES(self):
            return self.getToken(dslParser.QUES, 0)
        def trans_ret(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.Trans_retContext)
            else:
                return self.getTypedRuleContext(dslParser.Trans_retContext,i)

        def COLON(self):
            return self.getToken(dslParser.COLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondtrans" ):
                listener.enterCondtrans(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondtrans" ):
                listener.exitCondtrans(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondtrans" ):
                return visitor.visitCondtrans(self)
            else:
                return visitor.visitChildren(self)


    class ParentransContext(Trans_retContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.Trans_retContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)
        def trans_ret(self):
            return self.getTypedRuleContext(dslParser.Trans_retContext,0)
